고객리스트

--- a/mobile/html/index_리스트.html
+++ b/mobile/html/index_리스트.html
@@ -17,7 +17,33 @@
   <div class="wrap">
       <!-- content_area : s -->
       <div class="content_area"> 
+        <div class="customer_sort">
+          <div class="customer_total">고객<strong>163</strong>명</div>
+
+          <div class="sorting">
+            <div class="select_box">
+              <select id="" name="">
+                <option value="1">최근 동의 순</option>
+                <option value="1">이름순</option>
+                <option value="1">동의종료 순</option>
+                <option value="1">최근 분석 순</option>
+                <option value="1">최근 상령일 순</option>
+              </select>
+            </div>
+
+            <div class="list_type_select">
+              <button class="grid">
+                <span>그리드형</span>
+              </button>
+              <button class="list">
+                <span>리스트형</span>
+              </button>
+            </div>
+          </div>
+        </div>
+
         <div class="customer_list_box"> 
+          <!-- 리스트형 -->
           <div class="list_table_type">
             <div class="tbody_box load">
               <a class="item" href="#">
@@ -87,12 +113,13 @@
             </div>
           </div>
           
+          <!-- 그리드형 -->
           <div class="list_grid_type">
             <div class="item">
               <a href="#" class="customer_info">
                 <div class="name">독고영재</div>
-                <div class="info"><span>남</span><span>1981.05.30</span><span>32세</span></div>
-                <ul>
+                <div class="info"><span class="gender">남</span><span class="birth">1981.05.30</span><span class="old">32세</span></div>
+                <ul class="list">
                   <li>
                     <div class="tit">상령일자</div>
                     <div class="txt">11.30</div>
@@ -122,9 +149,49 @@
                 <div class="btn_util2">
                   <a href="tel:0123456789" class="btn_text size_small"><span>전화</span></a>
                   <a href="sms:0123456789" class="btn_text size_small"><span>문자</span></a>
-                  <button class="btn_text   fill_gray">
+                  <button class="btn_text btn_pdf size_small fill_gray">
                     <span>PDF 보기</span>
                   </button>
+                </div>
+              </div>
+            </div>
+            <div class="item">
+              <a href="#" class="customer_info">
+                <div class="name">독고영재</div>
+                <div class="info"><span class="gender">남</span><span class="birth">1981.05.30</span><span class="old">32세</span></div>
+                <ul class="list">
+                  <li>
+                    <div class="tit">상령일자</div>
+                    <div class="txt">11.30</div>
+                  </li>
+                  <li>
+                    <div class="tit">동의종료</div>
+                    <div class="txt">D-45</div>
+                  </li>
+                  <li>
+                    <div class="tit">보장분석</div>
+                    <div class="txt">2019.10.14</div>
+                  </li>
+                </ul>
+              </a>
+              <div class="btn_box">
+                <div class="btn_util">
+                  <button class="btn_circle like">
+                    <span>즐겨찾기</span>
+                  </button>
+                  <button class="btn_circle analysis">
+                    <span>통계</span>
+                  </button>
+                  <button class="btn_circle agree">
+                    <span>LMS</span>
+                  </button>
+                </div>
+                <div class="btn_util2">
+                  <a href="tel:0123456789" class="btn_text size_small"><span>전화</span></a>
+                  <a href="sms:0123456789" class="btn_text size_small"><span>문자</span></a>
+                  <a href="#" class="btn_text btn_pdf size_small fill_gray">
+                    <span>PDF 보기</span>
+                  </a>
                 </div>
               </div>
             </div>
