--- a/mobile/html/index_리스트.html
+++ b/mobile/html/index_리스트.html
@@ -33,10 +33,10 @@
 
             <div class="list_type_select">
               <button class="grid">
-                <span>그리드형</span>
+                <span class="blind">그리드형</span>
               </button>
               <button class="list">
-                <span>리스트형</span>
+                <span class="blind">리스트형</span>
               </button>
             </div>
           </div>
