index_리스트 수정

--- a/mobile/html/index.html
+++ b/mobile/html/index.html
@@ -166,7 +166,7 @@
         </div>
 
         <!-- 그리드형 -->
-        <div class="list_grid_type">
+        <div class="grid_type">
           <div class="item">
             <a href="#" class="customer_info">
               <div class="name">독고영재</div>
