--- a/mobile/html/가입현황.html
+++ b/mobile/html/가입현황.html
@@ -54,7 +54,7 @@
           <!-- insurance_list : s -->
           <div class="insurance_list">
             <div class="tit_box">
-              <h3 class="tit">정상계약</h3><span class="number">+3</span>
+              <h3 class="sort_tit">정상계약</h3><span class="number">+3</span>
             </div>
             <button class="insurance">
               <div class="info">
@@ -149,7 +149,7 @@
           <!-- insurance_list : s -->
           <div class="insurance_list">
             <div class="tit_box">
-              <h3 class="tit">자동차보험</h3><span class="number">+1</span>
+              <h3 class="sort_tit">자동차보험</h3><span class="number">+1</span>
             </div>
             <button class="insurance">
               <div class="info">
@@ -189,7 +189,7 @@
           <!-- insurance_list : s -->
           <div class="insurance_list">
             <div class="tit_box">
-              <h3 class="tit">실효해지</h3><span class="number">+2</span>
+              <h3 class="sort_tit">실효해지</h3><span class="number">+2</span>
             </div>
             <button class="insurance disabled">
               <div class="info">
