--- a/mobile/html/컨설팅.html
+++ b/mobile/html/컨설팅.html
@@ -496,7 +496,7 @@
             <!-- insurance_list : s -->
             <div class="insurance_list check_list">
               <div class="tit_box">
-                <h3 class="tit">가계약</h3><span class="number">+2</span>
+                <h3 class="sort_tit">가계약</h3><span class="number">+2</span>
               </div>
               <button class="insurance checked">
                 <div class="info">
@@ -541,7 +541,7 @@
             <!-- insurance_list : s -->
             <div class="insurance_list check_list">
               <div class="tit_box">
-                <h3 class="tit">정상계약</h3><span class="number">+5</span>
+                <h3 class="sort_tit">정상계약</h3><span class="number">+5</span>
               </div>
               <button class="insurance checked">
                 <div class="info">
