--- a/mobile/html/index.html
+++ b/mobile/html/index.html
@@ -27,7 +27,7 @@
 <body>
 <div class="wrap main">
   <div class="top_area">
-    <ul>
+    <ul class="menu_area">
       <li class="home"><a href="#" class="home">홈으로</a></li>
       <li class="util">
         <a href="#" class="menu01">등록</a>
