--- a/mobile/resources/html/가입현황.html
+++ b/mobile/resources/html/가입현황.html
@@ -23,9 +23,10 @@
 				<!-- insurance_list : s -->
 				<div class="insurance_list">
 					<div class="tit_box">
-						<h3 class="sort_tit">정상계약</h3><span class="number">+3</span>
+						<h3 class="sort_tit">정상계약</h3><span class="number"><strong>2</strong>건</span>
 					</div>
-					<div class="list">
+					
+					<div class="list_box">
 						<a class="insurance" href="#">
 							<div class="name">무배당 알파 Plus 보장보험(Ⅱ)0904</div>
 							<div class="payment_info">
@@ -67,68 +68,21 @@
 				<!-- insurance_list : s -->
 				<div class="insurance_list">
 					<div class="tit_box">
-						<h3 class="sort_tit">실효해지</h3><span class="number">+2</span>
+						<h3 class="sort_tit">실효해지</h3><span class="number"><strong>2</strong>건</span>
 					</div>
-					<a class="insurance disabled" href="#">
-						<div class="info">
-							<div class="inner">
-								<div class="logo"><img alt="한화생명" class="grayscale" src="/resources/images/gu.renew.logo/logo_hanwha_life.png">
+					<div class="list_box">
+						<a class="insurance disabled" href="#">
+							<div class="name">무배당 알파 Plus 보장보험(Ⅱ)0904</div>
+							<div class="payment_info">
+								<span class="state">정상</span>
+								<div class="info">
+									<div class="payment"><strong>69,030</strong>원 <span>매월납/12년</span></div>
+									<div class="date">2009.07.17~2082.07.17</div>
 								</div>
-								<div class="name">무배당 알파 Plus 보장보험(Ⅱ)0904</div>
-								<div class="date"><span class="state">실효</span>2009.07.17~2082.07.17</div>
 							</div>
-						</div>
-						<div class="payment">
-							<ul>
-								<li class="top">
-									<span class="th">매월납20년</span>
-									<span class="td"><strong class="count">1270660</strong>원</span>
-								</li>
-								<li>
-									<span class="th">납입횟수</span>
-									<span class="td">122/240회</span>
-								</li>
-								<li>
-									<span class="th">납입률</span>
-									<span class="td">51%</span>
-								</li>
-								<li>
-									<span class="th">납입보험료</span>
-									<span class="td">8,421,660원</span>
-								</li>
-							</ul>
-						</div>
-					</a>
-					<a class="insurance disabled" href="#">
-						<div class="info">
-							<div class="inner">
-								<div class="logo"><img alt="삼성생명" class="grayscale" src="/resources/images/gu.renew.logo/logo_samsung_life.png">
-								</div>
-								<div class="name">무배당 알파 Plus 보장보험(Ⅱ)0904</div>
-								<div class="date"><span class="state">해지</span>2009.07.17~2082.07.17</div>
-							</div>
-						</div>
-						<div class="payment">
-							<ul>
-								<li class="top">
-									<span class="th">매월납20년</span>
-									<span class="td"><strong class="count">1270660</strong>원</span>
-								</li>
-								<li>
-									<span class="th">납입횟수</span>
-									<span class="td">122/240회</span>
-								</li>
-								<li>
-									<span class="th">납입률</span>
-									<span class="td">51%</span>
-								</li>
-								<li>
-									<span class="th">납입보험료</span>
-									<span class="td">8,421,660원</span>
-								</li>
-							</ul>
-						</div>
-					</a>
+							<div class="logo"><img alt="한화생명" class="grayscale" src="/resources/images/gu.renew.logo/logo_lifeplanet_life.png"></div>
+						</a>
+					</div>				
 				</div>
 				<!-- insurance_list : e -->
 
