모바일 작업

--- a/mobile/resources/html/sub.html
+++ b/mobile/resources/html/sub.html
@@ -79,9 +79,20 @@
 		</div>
 	</div>
 	<div class="content_area bgWhite">
-		<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-
+		<br><br><br><br><br><br><br><br><br><br><<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 	</div>
+	<!-- bottom_fixed_menu_area : s	-->
+	<div class="bottom_fixed_menu_area">
+		<button class="home"><span>고객리스트</span></button>
+		<ul>
+			<li><button class="bottom_menu menu01 on"><span>전체현황</span></button></li>
+			<li><button class="bottom_menu menu02"><span>가입현황</span></button></li>
+			<li><button class="bottom_menu menu03"><span>진단상세</span></button></li>
+			<li><button class="bottom_menu menu04"><span>컨설팅</span></button></li>
+			<li><button class="bottom_menu menu05"><span>그레프</span></button></li>
+		</ul>
+	</div>
+	<!-- bottom_fixed_menu_area : e	-->
 </div>
 
 </body>
