가입현황-상세내역

--- a/mobile/resources/html/index_리스트.html
+++ b/mobile/resources/html/index_리스트.html
@@ -28,11 +28,7 @@
 				var idx = $(this).index();
 				targetCont.hide();
 				targetCont.eq(idx).show();
-				if (!target.hasClass("active")) {
-					target.addClass("active").siblings().removeClass('active');
-				} else {
-					target.removeClass("active");
-				}
+				target.addClass('active').siblings().removeClass('active');
 			});
 		})
 	</script>
